small changes to auto gen web page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Euclidean-geometry by theronhitchman</title>
+    <title>Euclidean Geometry &bull; Math 3600</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Euclidean-geometry</h1>
-        <p class="header">Course Notes and web site for Euclidean Geometry</p>
+        <h1 class="header">Euclidean Geometry</h1>
+        <p class="header">UNI Math 3600, Fall 2014</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/theronhitchman/euclidean-geometry/zipball/master">Download ZIP</a></li>
@@ -67,6 +67,6 @@ $ git checkout gh-pages
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
   </body>
 </html>
