--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Euclidean Geometry</h1>
-        <p class="header">UNI Math 3600, Fall 2014</p>
+        <p class="header">UNI Math 3600<br />Fall 2014</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/theronhitchman/euclidean-geometry/zipball/master">Download ZIP</a></li>
@@ -25,7 +25,7 @@
           <li><a class="buttons github" href="https://github.com/theronhitchman/euclidean-geometry">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/theronhitchman">theronhitchman</a></p>
+        <p class="header">This page is maintained by <a class="header name" href="https://www.uni.edu/theron">Prof. Theron Hitchman</a></p>
 
 
       </header>
